Ajustando os Testes de Integração Quebrados com JSON, XML e YML de PersonControll