@@ -6,6 +6,8 @@ import br.com.erudio.data.vo.v1.security.TokenVO;
 import br.com.erudio.integrationstests.testcontainers.AbstractIntegrationsTest;
 import br.com.erudio.integrationstests.vo.AccountCredentialsVO;
 import br.com.erudio.integrationstests.vo.PersonVO;
+import br.com.erudio.integrationstests.vo.pagedmodels.PagedModelPerson;
+import br.com.erudio.integrationstests.vo.wrappers.WrapperPersonVO;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.DeserializationFeature;
@@ -237,6 +239,7 @@ public class PersonControllerXmlTest extends AbstractIntegrationsTest {
 		var content = given().spec(specification)
 				.contentType(TestConfigs.CONTENT_TYPE_XML)
 				.accept(TestConfigs.CONTENT_TYPE_XML)
+				.queryParam("page", 0, "size", 10, "direction", "asc")
 				.when()
 				.get()
 				.then()
@@ -245,9 +248,9 @@ public class PersonControllerXmlTest extends AbstractIntegrationsTest {
 				.body()
 				.asString();
 
-		List<PersonVO> people = objectMapper.readValue(content, new TypeReference<List<PersonVO>>() {});
-
-		PersonVO foundPersonOne = people.get(0);
+		PagedModelPerson wrapper = objectMapper.readValue(content, PagedModelPerson.class);
+		var people = wrapper.getContent();
+		PersonVO foundPersonOne = people.getFirst();
 
 		assertNotNull(foundPersonOne.getId());
 		assertNotNull(foundPersonOne.getFirstName());
@@ -257,11 +260,11 @@ public class PersonControllerXmlTest extends AbstractIntegrationsTest {
 
 		assertTrue(foundPersonOne.getEnabled());
 
-		assertEquals(1, foundPersonOne.getId());
+		assertEquals(11, foundPersonOne.getId());
 
-		assertEquals("Jose Natal", foundPersonOne.getFirstName());
-		assertEquals("Rodrigues Bento", foundPersonOne.getLastName());
-		assertEquals("Quadra 405 norte AL 6", foundPersonOne.getAddress());
+		assertEquals("Abbe", foundPersonOne.getFirstName());
+		assertEquals("Henrique", foundPersonOne.getLastName());
+		assertEquals("23438 Bluejay Place", foundPersonOne.getAddress());
 		assertEquals("Male", foundPersonOne.getGender());
 
 		PersonVO foundPersonTre = people.get(2);
@@ -272,14 +275,14 @@ public class PersonControllerXmlTest extends AbstractIntegrationsTest {
 		assertNotNull(foundPersonTre.getAddress());
 		assertNotNull(foundPersonTre.getGender());
 
-		assertTrue(foundPersonTre.getEnabled());
+		assertFalse(foundPersonTre.getEnabled());
 
-		assertEquals(3, foundPersonTre.getId());
+		assertEquals(895, foundPersonTre.getId());
 
-		assertEquals("Maria Clara", foundPersonTre.getFirstName());
-		assertEquals("Rodrigues Bento", foundPersonTre.getLastName());
-		assertEquals("Quadra 308 norte AL 8", foundPersonTre.getAddress());
-		assertEquals("Female", foundPersonTre.getGender());
+		assertEquals("Adams", foundPersonTre.getFirstName());
+		assertEquals("Thurley", foundPersonTre.getLastName());
+		assertEquals("3 Fieldstone Center", foundPersonTre.getAddress());
+		assertEquals("Male", foundPersonTre.getGender());
 	}
 
 
